--- a/loreal-enablement-dashboard.html
+++ b/loreal-enablement-dashboard.html
@@ -584,7 +584,7 @@
         </div>
         <nav>
             <div class="nav-item active" onclick="app.router('dashboard', this)">
-                <i class="fa-solid fa-chart-line"></i> Dashboard
+                <i class="fa-solid fa-chart-line"></i> Executive Overview
             </div>
             <div class="nav-item" onclick="app.router('livestream', this)">
                 <i class="fa-solid fa-video"></i> Livestream
@@ -1490,3 +1490,4 @@
 </script>
 </body>
 </html>
+
